--- a/styles.css
+++ b/styles.css
@@ -1,140 +1,130 @@
-*{
-    font-family: 'Roboto', sans-serif;
+* {
+  font-family: 'Roboto', sans-serif;
 }
 
-body{
-    font-family: sans-serif;
-    margin: 0;
-    background-image: url("image/fondo.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+body {
+  font-family: 'Roboto';
+  margin: 0;
+  background-image: url("image/fondo.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
+
 body::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("image/fondo.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    filter: blur(5px); /* Aplica un difuminado de 5 píxeles */
-  }
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("image/fondo.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: blur(5px); /* Aplica un difuminado de 5 píxeles */
+}
 
-nav{
-    padding-right: 3em;
-  }
+nav {
+  padding-right: 3em;
+}
 
-a{
-    text-decoration: none;
+header a {
+  text-decoration: none;
   color: #779D68;
   font-weight: 600;
-  
+  margin-left: 3em;
 }
-header{
-    min-height: 5vh;
-    height: 5vh;
-    display: flex;
-    background-color: #EDF1D6;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5vh;
+
+header {
+  min-height: 5vh;
+  height: 5vh;
+  display: flex;
+  background-color: #EDF1D6;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5vh;
 }
 
 header .logo .Crop {
-    padding-left: 1em;
-    padding-bottom: 1em;
-    font-weight: 900;
-  }
+  padding-left: 1em;
+  padding-bottom: 1em;
+  font-weight: 900;
+}
 
 .centro {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Ajusta la altura para que el contenido esté en el centro de la pantalla */
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Ajusta la altura para que el contenido esté en el centro de la pantalla */
+}
 
-  article {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    color: white;
-    /* ....... */
-    width:40%; 
-    margin-left: 5%; 
-    float:left; 
-    text-align: justify;
-    
-  }
-
-  article .parrafo1{
-    order: -1;
-  }
-
-  article .parrafo2{
-    order: 1;
-  }
-
-  div {
-    background-color: rgba(97, 95, 95, 0.384);
-     border-radius: 4%;
-     
-     /* height: 20vh;
-     width: 25vh; */
-     display: flex;
-     justify-content: center;
-     align-items: cenrer;
-     position: absolute;
-     bottom: 10vh;
-     left: 20vh;
-  }
-
-  div .planta{
-    border: 3px solid white; /* Color rojo (#ff0000) */
-    display: flex;
-    align-items: center;
-    justify-content: center;   
-    width: 40vh;
-    height: 25vh;
-    border-radius: 4%;
-  }
-
-  .titu{
+article {
   color: white;
-  position: absolute;
-  bottom: -4vh;  
-  left: 35vh;
-  top: -10vh;
-  }
+  width: 30%;
+  margin-left: 5%;
+  float: left;
+  text-align: justify;
+}
 
-  div .fresa{
-    width: 100vh;
-    padding-left: 100px;
-    
-  }
+article .parrafo1 {
+  order: -1;
+}
 
-  div .imagen2{
-    position: absolute;
-    left: 80vh;
-    top: -36vh;
-    border: 3px solid white; /* Color rojo (#ff0000) */
-    display: flex;
-    align-items: center;
-    justify-content: center;   
-    width: 40vh;
-    height: 25vh;
-  }
+article .parrafo2 {
+  order: 1;
+}
 
-  .titu2{
-    color: white;
-    position: absolute;
-    bottom: -4vh;  
-    left: 100vh;
-    top: -10vh;
-    }
+main {
+  color: #EDF1D6;
+  margin-top: 20%;
+  display: flex;
+  flex-direction: column; /* Cambia la dirección del flex a columna */
+  align-items: center; /* Centra los elementos horizontalmente */
+}
+
+.cultivos {
+  display: flex;
+  justify-content: center; /* Centra los elementos horizontalmente */
+  align-items: center; /* Centra los elementos verticalmente */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.cultivos li {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 30%;
+  margin: 20px; /* Aumenta el margen para separar los elementos */
+  padding: 30px 20px;
+  box-sizing: border-box;
+  border: 0.2em solid #EDF1D6;
+  border-radius: 10px;
+  background-color: #d9d9d994;
+}
+
+
+.cultivos li img {
+  width: 100%; /* Ajusta el ancho de la imagen al 100% del elemento padre */
+  height: auto; /* Ajusta la altura de la imagen automáticamente */
+  max-height: 150px; /* Establece una altura máxima para evitar que las imágenes sean demasiado grandes */
+  object-fit: cover; /* Ajusta la imagen para que se ajuste dentro del contenedor manteniendo su relación de aspecto */
+}
+
+.cultivos h2 {
+  font-size: 16px; /* Ajusta el tamaño del título */
+  font-weight: bold;
+  margin-top: 10px; /* Agrega un margen superior al título */
+  text-align: center; /* Centra el texto horizontalmente */
+}
+
+li a {
+  text-decoration: none;
+  color: #EDF1D6;
+}
